--- a/Atoms/Atoms.csproj
+++ b/Atoms/Atoms.csproj
@@ -1,6 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PackageId>CalebBender.Atoms</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Caleb Bender</Authors>
+    <Company>Caleb Bender</Company>
+    <Description>A flexible .NET Core ORM for SQL Server that is atomic and thread-safe</Description>
+  </PropertyGroup>
+  
+  <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
