--- a/Atoms/Atoms.csproj
+++ b/Atoms/Atoms.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <PackageId>CalebBender.Atoms</PackageId>
-    <Version>2.0.4</Version>
+    <Version>3.0.0</Version>
     <Authors>Caleb Bender</Authors>
     <Company>Caleb Bender</Company>
     <Description>A flexible and atomic .NET Core ORM for SQL Server</Description>
-    <PackageReleaseNotes>Fix bug with query template when querying null tuple item.</PackageReleaseNotes>
+    <PackageReleaseNotes>Anonymous models were added, which are data models that do not belong to any database entity in particular. At runtime, you can use a repository factory to specify the database entity name to bind to the anonymous model for CRUD operations. The only breaking change is an added optional parameter to the IAtomicRepositoryFactory interface method CreateRepository.</PackageReleaseNotes>
     <PackageIconUrl>https://raw.githubusercontent.com/caleb-bender/atoms/main/AtomsIcon.JPG</PackageIconUrl>
     <RepositoryUrl>https://github.com/caleb-bender/atoms</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
   
   <ItemGroup>
